[package]
name = "steel-memory"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "steel-memory"
path = "src/main.rs"

[lib]
name = "steel_memory_lib"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic", "hf-hub-native-tls", "image-models"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
