[package]
name = "steel-memory"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A spatial memory palace for AI agents with semantic vector search, knowledge graphs, and MCP tools"
readme = "README.md"
repository = "https://github.com/rexlunae/steel-memory"
homepage = "https://github.com/rexlunae/steel-memory"
documentation = "https://docs.rs/steel-memory"
keywords = ["ai", "agents", "memory", "mcp", "embeddings"]
categories = ["database", "science", "text-processing"]
authors = ["Erica Stith <rexlunae@gmail.com>"]

[[bin]]
name = "steel-memory"
path = "src/main.rs"
bench = false

[lib]
name = "steel_memory_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "longmemeval-benchmark"
path = "src/bin/longmemeval-benchmark.rs"
bench = false

[[bench]]
name = "longmemeval"
path = "benches/longmemeval.rs"
harness = false

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
fastembed = "5"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
